--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 <body>
     <nav class="navigation max-width-1 m-auto">
         <div class="nav-left">
-            <a href="./index.html">
+            <a href="https://gamerepairzone.com">
                 <span><img src="./GAME_logo.png" width="200px" alt=""></span>
             </a>
             <ul>
-                <li><a href="./index.html">HOME</a></li>
-                <li><a href="./about.html">ABOUT</a></li>
+                <li><a href="https://gamerepairzone.com">HOME</a></li>
+                <li><a href="https://gamerepairzone.com/about">ABOUT</a></li>
                 
             </ul>
         </div>
@@ -61,7 +61,7 @@
                 <img src="img/3.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="./stalker2.html">
+                <a href="https://gamerepairzone.com">
                     <h3>Stalker 2: Error Fixing and Comprehensive Guide</h3>
                 </a>
             
