Update stalker2.html canonical fixed

--- a/stalker2.html
+++ b/stalker2.html
@@ -29,7 +29,7 @@
     <header class="bg-dark text-white py-3">
         <div class="container">
             <div class="lilita-one-regular">
-                <a href="./index.html">
+                <a href="https://gamerepairzone.com">
                     <img src="GAME_logo.png" alt="Game Repair Zone Logo" style="width: 350px; height: 100px;">
                 </a>
             </div>
