--- a/stalker2.html
+++ b/stalker2.html
@@ -77,7 +77,7 @@
                             </li>
                             <li>
                                 Download <a
-                                    href="https://dlssg-to-fsr3-0.100-738-0-100-1720544919.zip/">dlssg-to-fsr3-0.100-738-0-100-1720544919.zip</a>
+                                    href="https://www.nexusmods.com/site/mods/738?tab=files&file_id=3487">dlssg-to-fsr3-0.100-738-0-100-1720544919.zip</a>
                                 and execute <code>DisableNvidiaSignatureChecks.reg</code> file. It is needed to allow
                                 the game to show the DLSS Frame Generation setting on 30XX cards.
                             </li>
