Update index.html -- link added

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <img src="img/3.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="https://gamerepairzone.com">
+                <a href="https://gamerepairzone.com/stalker2">
                     <h3>Stalker 2: Error Fixing and Comprehensive Guide</h3>
                 </a>
             
